[gd_scene load_steps=4 format=2]

[ext_resource path="res://login_scene/LoginScreen.gd" type="Script" id=1]
[ext_resource path="res://button03.png" type="Texture" id=2]
[ext_resource path="res://black_background.jpg" type="Texture" id=3]

[node name="LoginScreen" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 1 )

[node name="NinePatchRect" type="NinePatchRect" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -200.0
margin_top = -262.5
margin_right = 200.0
margin_bottom = 262.5
rect_min_size = Vector2( 400, 525 )
texture = ExtResource( 3 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VBoxContainer" type="VBoxContainer" parent="NinePatchRect"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 35.0
margin_top = 60.0
margin_right = -35.0
margin_bottom = -45.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Title" type="Label" parent="NinePatchRect/VBoxContainer"]
margin_right = 330.0
margin_bottom = 14.0
text = "Login Screen"
align = 1
valign = 1

[node name="MarginContainer" type="MarginContainer" parent="NinePatchRect/VBoxContainer"]
margin_top = 18.0
margin_right = 330.0
margin_bottom = 63.0
rect_min_size = Vector2( 0, 45 )

[node name="UsernameTitle" type="Label" parent="NinePatchRect/VBoxContainer"]
margin_top = 67.0
margin_right = 330.0
margin_bottom = 81.0
text = "Username"
valign = 1

[node name="Username" type="LineEdit" parent="NinePatchRect/VBoxContainer"]
margin_top = 85.0
margin_right = 330.0
margin_bottom = 109.0

[node name="PasswordTitle" type="Label" parent="NinePatchRect/VBoxContainer"]
margin_top = 113.0
margin_right = 330.0
margin_bottom = 127.0
text = "Password"
valign = 1

[node name="Password" type="LineEdit" parent="NinePatchRect/VBoxContainer"]
margin_top = 131.0
margin_right = 330.0
margin_bottom = 155.0

[node name="MarginContainer2" type="MarginContainer" parent="NinePatchRect/VBoxContainer"]
margin_top = 159.0
margin_right = 330.0
margin_bottom = 219.0
rect_min_size = Vector2( 0, 60 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="LoginButton" type="TextureButton" parent="NinePatchRect/VBoxContainer"]
margin_left = 55.0
margin_top = 223.0
margin_right = 275.0
margin_bottom = 278.0
rect_min_size = Vector2( 220, 55 )
size_flags_horizontal = 4
texture_normal = ExtResource( 2 )
expand = true

[node name="Login" type="Label" parent="NinePatchRect/VBoxContainer/LoginButton"]
anchor_right = 1.0
anchor_bottom = 1.0
text = "Login"
align = 1
valign = 1

[node name="CreateUserButton" type="TextureButton" parent="NinePatchRect/VBoxContainer"]
margin_left = 55.0
margin_top = 282.0
margin_right = 275.0
margin_bottom = 337.0
rect_min_size = Vector2( 220, 55 )
size_flags_horizontal = 4
texture_normal = ExtResource( 2 )
expand = true

[node name="CreateAccount" type="Label" parent="NinePatchRect/VBoxContainer/CreateUserButton"]
anchor_right = 1.0
anchor_bottom = 1.0
text = "Create Account"
align = 1
valign = 1

[node name="LoginStatus" type="Label" parent="NinePatchRect/VBoxContainer"]
margin_top = 341.0
margin_right = 330.0
margin_bottom = 355.0
text = "Login Status"
align = 1

[connection signal="text_changed" from="NinePatchRect/VBoxContainer/Username" to="." method="_on_Username_text_changed"]
[connection signal="text_changed" from="NinePatchRect/VBoxContainer/Password" to="." method="_on_Password_text_changed"]
[connection signal="pressed" from="NinePatchRect/VBoxContainer/LoginButton" to="." method="_on_LoginButton_pressed"]
[connection signal="pressed" from="NinePatchRect/VBoxContainer/CreateUserButton" to="." method="_on_CreateUserButton_pressed"]
